# syndrmrs

./: CLAUDE.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
benches/: kem.rs
src/: concat.rs  fft.rs  gf256.rs  kem.rs  lib.rs  param.rs  pke.rs  precomputed.rs  rm.rs  rs.rs  test_util.rs  vect.rs  xof.rs
tests/: kats.rs
tests/kats/ref/: README.md
tests/kats/ref/hqc-1/: intermediates_values
tests/kats/ref/hqc-3/: intermediates_values
tests/kats/ref/hqc-5/: PQCkemKAT_7333.req  intermediates_values
